# mesrouter

./: CMakeLists.txt  CMakePresets.json  Dockerfile  vcpkg.json
configs/: baseline.json
include/: application.h  config.h
include/components/: message.h  processor.h  producer.h  router.h  strategy.h
include/utils/: limiter.h  mpmc.h  mpsc.h  spsc.h
scripts/: Makefile  build.sh  clean.sh
src/: application.cpp  config.cpp  main.cpp
src/components/: processor.cpp  producer.cpp  stage1router.cpp  stage2router.cpp  strategy.cpp
